# lisp-interpreter

./: CMakeLists.txt  README.md  lisp.bnf
.github/workflows/: ccpp.yml
include/: atom.h  builtin.h  debug.h  environment.h  eval.h  format.h  pair.h  parser.h  reader.h  ringbuffer.h  token.h  tokenizer.h
src/: atom.cpp  main.cpp
test/: bench.cpp  tests.cpp
